@@ -428,3 +428,7 @@ Conekta (October 2013)
 App55 (November 2013)
 
 * (ianbutler55)
+
+Swipe Checkout (November 2013)
+
+* (matt-optimizerhq)
